import "google/protobuf/timestamp.proto";

message WebSocketResponse {
  required string status = 1;
  required string feed = 2;
  optional Data data = 3;
  optional Error error = 4;
}

message PendingTx {
  required string h = 1;
  required float g = 2;
  required string to = 3;
  required google.protobuf.Timestamp t = 4;
  optional string f = 5;
  optional int32 n = 6;
  
}

message DroppedTx {
  required string h = 1;
  required bool d = 2;
}

message MempoolTx {
  oneof tx {
    PendingTx pending = 1;
    DroppedTx dropped = 2;
  }
}

message BlockTx {
  required string h = 1;
  required int32 i = 2;
  required float g = 3;
  required string to = 4;
  required int32 gu = 5;
  required string s = 6;
}

message Data {
  oneof data {
    BlockData block = 1;
    MempoolData mempool = 2;
  }
}

message MempoolData {
  required string chainId = 1;
  repeated MempoolTx txs = 2;
}

message BlockData {
  required string chainId = 1;
  required int32 height = 2;
  required string hash = 3;
  required int32 timestamp = 4;
  required int32 txnCount = 5;
  repeated BlockTx txs = 6;
}

message UnsubscribeData {
  required string chainId = 1;
}

message Error {
  required int32 code = 1;
  required string message = 2;
}